# android_camera_muxer

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  recorder.cpp
app/src/main/cpp/ffmpeg/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/libavfilter/: buffersrc.h
app/src/main/cpp/ffmpeg/libavformat/: avformat.h  avio.h
app/src/main/cpp/ffmpeg/libavutil/: frame.h  hwcontext.h  opt.h  pixfmt.h
app/src/main/java/com/example/myapplication/: MainActivity.kt  MediaRecorder.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
